# data_tooling

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  colab_ngrok_dask.py  datastore.py  datastore_utils.py  distributed.py  manage_pii_and_bias.py  pyproject.toml  requirements.txt
ac_dc/: README.md  __init__.py  anonymization.py  badwords.py  basic_pipeline.py  config.py  deduplicate.py  download_kenlm_models.py  download_oscar.py  download_sentencepiece_kenlm_models.py  filtering.py  filtering_stats.ipynb  filtering_visualization.py  filters.py  flagged_words.py  languages.py  languages_id.py  main_filtering.py  normalizers.py  oscar_sample_filter.py  parameters_filtering.py  perplexity.py  person_and_id_anonymization.py  pipeline.py  stopwords.py  test_anonymization.py
bertin/: README.md  config.json  config.py  convert.py  events.out.tfevents.1625704081.t1v-n-a4d97d44-w-0.212075.3.v2  events.out.tfevents.1625704245.t1v-n-a4d97d44-w-0.216676.3.v2  events.out.tfevents.1625705283.t1v-n-a4d97d44-w-0.234462.3.v2  get_embeddings_and_perplexity.py  perplexity.py  run.sh  run_mlm_flax.py  run_mlm_flax_stream.py  run_stream.sh  special_tokens_map.json  tokenizer.json  tokenizer_config.json  tokens.py  tokens.py.orig  tsne_plot.py  vocab.json
bertin_oscar/: README.md  config.py  get_embeddings_and_perplexity.py  merges.txt  perplexity.py  run_stream.sh  tsne_plot.py
cc_pseudo_crawl/: DEPTH.md  README.md  cc_lookup.py  cc_lookup_next.py  cc_lookup_seed.py  check_erros_in_dataset.py  deeper.py  divide_in_shards.py  download_warc.py  (+16 more)
perplexity_lenses/: README.md  app.py  cli.py  pyproject.toml  requirements.txt
perplexity_lenses/perplexity_lenses/: __init__.py  data.py  engine.py  perplexity.py  visualization.py
perplexity_lenses/tests/: test_data.py
(+582 files in other folders)
